kubernetes/infrastructure/velero/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: velero
  labels:
    app.kubernetes.io/name: velero
